k8s/ambient-mode/networking/cell-a/mtls.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mtls
spec:
  mtls:
    mode: STRICT
