k8s/ambient-mode/networking/cell-a/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  # Load Balancer
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
spec:
  parentRefs:
    - name: cell-a-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/ping
        - path:
            type: Exact
            value: /api/pong
        - path:
            type: Exact
            value: /api/health-check
      backendRefs:
        - name: cell-a-v1-svc
          port: 80
