k8s/ambient-mode/networking/cell-a/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: cell-a-v1-svc
      port: 80
    - group: ""
      kind: Service
      name: cell-a-v2-svc
      port: 80
  rules:
    - matches:
        - headers:
            - name: ab
              value: "true"
      backendRefs:
        - name: cell-a-v2-svc
          port: 80
          weight: 30
        - name: cell-a-v1-svc
          port: 80
          weight: 70
    - backendRefs:
        - name: cell-a-v1-svc
          port: 80
