k8s/ambient-mode/networking/cell-a/v1-destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: v1-dr
  labels:
    app.kubernetes.io/version: V1
spec:
  host: cell-a-v1-svc.cell-a.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    outlierDetection:
      consecutiveGatewayErrors: 5
      interval: 10s
      baseEjectionTime: 120s
      maxEjectionPercent: 100
    tls:
      mode: ISTIO_MUTUAL
